Remove NLog and update version.

--- a/generator/cybersource-csharp-template/ApiClient.mustache
+++ b/generator/cybersource-csharp-template/ApiClient.mustache
@@ -24,7 +24,7 @@ using RestSharp;
 using AuthenticationSdk.core;
 using AuthenticationSdk.util;
 using System.Security.Cryptography.X509Certificates;
-using NLog;
+
 
 namespace {{packageName}}.Client
 {
@@ -62,9 +62,9 @@ namespace {{packageName}}.Client
             {{#netStandard}}
             RestClient.IgnoreResponseStatusCode = true;
             {{/netStandard}}
-            if (logger == null)
+            if (false)
             {
-                logger = LogManager.GetCurrentClassLogger();
+                
             }
         }
 
@@ -137,7 +137,7 @@ namespace {{packageName}}.Client
         /// <summary>
         /// Internal class logger
         /// </summary>
-        private static Logger logger;
+        
 
         // Creates and sets up a RestRequest prior to a call.
         private RestRequest PrepareRequest(
@@ -429,14 +429,12 @@ namespace {{packageName}}.Client
                     }
                 }
 
-                if (LogUtility.IsMaskingEnabled(logger))
+                if (false)
                 {
-                    logger.Debug($"HTTP Request Headers :\n{LogUtility.MaskSensitiveData(headerPrintOutput.ToString())}");
-                }
+                                     }
                 else
                 {
-                    logger.Debug($"HTTP Request Headers :\n{headerPrintOutput}");
-                }
+                                     }
 
                 InterceptRequest(request);
                 {{#netStandard}}
@@ -474,14 +472,12 @@ namespace {{packageName}}.Client
                     headerPrintOutput.Append($"{stringBuilder.ToString().Remove(stringBuilder.Length - 2)}\n");
                 }
 
-                if (LogUtility.IsMaskingEnabled(logger))
+                if (false)
                 {
-                    logger.Debug($"HTTP Request Headers :\n{LogUtility.MaskSensitiveData(headerPrintOutput.ToString())}");
-                }
+                                     }
                 else
                 {
-                    logger.Debug($"HTTP Request Headers :\n{headerPrintOutput.ToString()}");
-                }
+                                     }
 
                 //getting the response stream using httpwebrequest
                 HttpWebResponse responseT = (HttpWebResponse)requestT.GetResponse();
@@ -505,8 +501,7 @@ namespace {{packageName}}.Client
                     }
                     catch (Exception err)
                     {
-                        logger.Error($"ApiException : Error writing to path {DownloadResponseFileName}");
-                        throw new ApiException(-1, $"Error writing to path : {DownloadResponseFileName}");
+                                                 throw new ApiException(-1, $"Error writing to path : {DownloadResponseFileName}");
                     }
                 }
 
@@ -539,33 +534,28 @@ namespace {{packageName}}.Client
             httpResponseHeaders = response.Headers;
             httpResponseData = response.Content;
 
-            logger.Debug($"HTTP Response Status Code: {httpResponseStatusCode}");
-
+             
             var responseHeadersBuilder = new StringBuilder();
             foreach (var header in httpResponseHeaders)
             {
                 responseHeadersBuilder.Append($"{header}\n");
             }
 
-            if (LogUtility.IsMaskingEnabled(logger))
+            if (false)
             {
-                logger.Debug($"HTTP Response Headers :\n{LogUtility.MaskSensitiveData(responseHeadersBuilder.ToString())}");
-            }
+                             }
             else
             {
-                logger.Debug($"HTTP Response Headers :\n{responseHeadersBuilder.ToString()}");
-            }
+                             }
 
             if (!string.IsNullOrEmpty(httpResponseData))
             {
-                if (LogUtility.IsMaskingEnabled(logger))
+                if (false)
                 {
-                    logger.Debug($"HTTP Response Body :\n{LogUtility.MaskSensitiveData(httpResponseData)}");
-                }
+                                     }
                 else
                 {
-                    logger.Debug($"HTTP Response Body :\n{httpResponseData}");
-                }
+                                     }
             }
 
             return response;
@@ -605,14 +595,12 @@ namespace {{packageName}}.Client
                 }
             }
 
-                if (LogUtility.IsMaskingEnabled(logger))
+                if (false)
                 {
-                    logger.Debug($"HTTP Request Headers :\n{LogUtility.MaskSensitiveData(headerPrintOutput.ToString())}");
-                }
+                                     }
                 else
                 {
-                    logger.Debug($"HTTP Request Headers :\n{headerPrintOutput.ToString()}");
-                }
+                                     }
 
             InterceptRequest(request);
             var response = await RestClient.Execute{{^netStandard}}TaskAsync{{/netStandard}}(request);
@@ -623,33 +611,28 @@ namespace {{packageName}}.Client
             var httpResponseHeaders = response.Headers;
             var httpResponseData = response.Content;
 
-            logger.Debug($"HTTP Response Status Code: {httpResponseStatusCode}");
-
+             
             var responseHeadersBuilder = new StringBuilder();
             foreach (var header in httpResponseHeaders)
             {
                 responseHeadersBuilder.Append($"{header}\n");
             }
 
-            if (LogUtility.IsMaskingEnabled(logger))
+            if (false)
             {
-                logger.Debug($"HTTP Response Headers :\n{LogUtility.MaskSensitiveData(responseHeadersBuilder.ToString())}");
-            }
+                             }
             else
             {
-                logger.Debug($"HTTP Response Headers :\n{responseHeadersBuilder.ToString()}");
-            }
+                             }
 
             if (!string.IsNullOrEmpty(httpResponseData))
             {
-                if (LogUtility.IsMaskingEnabled(logger))
+                if (false)
                 {
-                    logger.Debug($"HTTP Response Body :\n{LogUtility.MaskSensitiveData(httpResponseData)}");
-                }
+                                     }
                 else
                 {
-                    logger.Debug($"HTTP Response Body :\n{httpResponseData}");
-                }
+                                     }
             }
 
             return response;
@@ -773,8 +756,7 @@ namespace {{packageName}}.Client
             }
             catch (Exception e)
             {
-                logger.Error($"JSON Deserialization Exception : {e.Message}");
-                throw new ApiException(500, e.Message);
+                                 throw new ApiException(500, e.Message);
             }
         }
 
@@ -791,8 +773,7 @@ namespace {{packageName}}.Client
             }
             catch (Exception e)
             {
-                logger.Error($"JSON Serialization Exception : {e.Message}");
-                throw new ApiException(500, e.Message);
+                                 throw new ApiException(500, e.Message);
             }
         }
 
@@ -886,8 +867,7 @@ namespace {{packageName}}.Client
 
             if (input == null)
             {
-                logger.Error("ArgumentNullException : URL to encode is null");
-                throw new ArgumentNullException("URL to encode is null.");
+                                 throw new ArgumentNullException("URL to encode is null.");
             }
 
             if (input.Length <= maxLength)
